# vio_homeworks

./: .gitignore  CMakeLists.txt  README.md
h001/: CMakeLists.txt  main.cpp  main.tex
h002/vio_data_simulation/: CMakeLists.txt
h002/vio_data_simulation-ros_version/kalibr_allan/matlab/: SCRIPT_allan_matparallel.m  SCRIPT_process_results.m
h002/vio_data_simulation-ros_version/src/src/: param.h
h002/vio_data_simulation/python_tool/: draw_trajcory.py
h002/vio_data_simulation/src/: imu.cpp
h003/: main.aux  main.tex
h003/CurveFitting_LM/: CMakeLists.txt
h003/CurveFitting_LM/app/: CMakeLists.txt  CurveFitting.cpp  CurveFitting2.cpp
h003/CurveFitting_LM/backend/: problem.cc
h004/course4/nullspace_test/: hessian_nullspace_test.cpp
h004/kohill-第四章作业/h004/: hessian_nullspace_test.cpp  kohill第四章作业.docx
h006/: CMakeLists.txt  main.cpp  main.docx  工作簿1.xlsx
h007/: main.docx
h007/VINS-Course/: .gitignore  CMakeLists.txt
h007/VINS-Course/config/: euroc_config.yaml
h007/VINS-Course/gdb/: .gdbinit
h007/VINS-Course/include/: System.h
h007/VINS-Course/src/: System.cpp
h007/VINS-Course/test/: run_euroc.cpp
h007/vio_data_simulation/: .gitignore  CMakeLists.txt
h007/vio_data_simulation/src/: param.cpp  param.h  utilities.cpp  utilities.h
h008/: .gitignore  第八次作业.docx
h008/sources/dogleg/VINS-Course/: CMakeLists.txt  evo.sh
h008/sources/dogleg/VINS-Course/config/: euroc_config.yaml
h008/sources/dogleg/VINS-Course/gdb/: .gdbinit  printers.py
h008/sources/dogleg/VINS-Course/include/backend/: problem.h
h008/sources/dogleg/VINS-Course/src/: System.cpp
h008/sources/dogleg/VINS-Course/src/backend/: problem.cc
h008/sources/dogleg/VINS-Course/test/: CurveFitting.cpp  run_euroc.cpp
h008/sources/lamba/VINS-Course/: README.md  convert_gt.py  evo.sh
h008/sources/lamba/VINS-Course/include/backend/: problem.h
h008/sources/lamba/VINS-Course/src/: System.cpp
h008/sources/lamba/VINS-Course/src/backend/: problem.cc
h008/sources/multi-threading-make-hessian/VINS-Course/: CMakeLists.txt
h008/sources/multi-threading-make-hessian/VINS-Course/src/: System.cpp
h008/sources/multi-threading-make-hessian/VINS-Course/src/backend/: problem.cc
h008/sources/multi-threading-make-hessian/VINS-Course/test/: run_euroc.cpp
hoo5/: main.docx
hoo5/hw_course5_new/app/: TestMonoBA.cpp
hoo5/hw_course5_new/backend/: edge_reprojection.h  problem.cc
